--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,6 +23,7 @@ section, summary, time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
+	font-weight:0;
 	vertical-align: baseline;}
 
 article, aside, details, figcaption, figure,
